# unhexo

./: .gitignore  README.md  biome.json  index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/components/about/: index.tsx
src/lib/components/hex-row/: index.tsx
src/lib/components/hex-viewer/: buffered.tsx  go-to-offset-dialog.tsx  index.tsx  virtual-scrollbar.tsx
src/lib/components/status-bar/: index.tsx
src/lib/components/tabs/: index.tsx
src/lib/components/titlebar/: index.tsx
src/lib/components/ui/: menubar-menu.tsx  new-file-dialog.tsx  window-controls.tsx
src/lib/context/: FileContext.tsx
src/lib/hooks/: useDiff.ts  useFileBuffer.ts  useForceUpdate.ts  useHexViewerSelection.ts  useHexViewerVirtualization.ts  usePersistedState.ts  useTheme.ts
src/lib/utils/: changeSet.ts  clipboard.ts  diffBuffers.ts
